test/ddc-spec/error/01-ErrorExp/13-AbsParamUnannotated/Test.dct

-- Function abstraction without a type annotation.
--  In recon mode they all need to be annoated.
module Test with letrec

f: Nat# -> Nat# = λx. x


